--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="project.html">Project</a>
             <a href="chinmayi.html">Chinmayi</a>
             <a href="ananya.html">Ananya</a>
