--- a/ananya.html
+++ b/ananya.html
@@ -146,7 +146,7 @@
 </head>
 <body>
   <nav>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="project.html">Project</a>
         <a href="ananya.html">Ananya</a>
         <a href="chinmayi.html">Chinmayi</a>
