--- a/project.html
+++ b/project.html
@@ -62,8 +62,8 @@
         main h2 {
             color: #A0CDCA; /* Cool Aquamarine */
             margin-bottom: 15px;
-            text-align: left;
-            font-weight: 600;
+            text-align: center;
+            font-weight: 500;
         }
         
         main h3 {
