--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
         /* Navigation Styling */
         nav {
             background-color: #617E96; /* Slate Blue */
-            padding: 10px;
+            padding: 20px 0;
             text-align: center;
             position: sticky;
-            top: 0;
-            z-index: 1000;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         nav a {
-            color: white;
+            color: #FFFFFF; /* White */
             text-decoration: none;
-            padding: 12px 20px;
-            margin: 0 10px;
-            display: inline-block;
+            margin: 0 20px;
+            font-weight: bold;
+            font-size: 1.1rem;
+            padding: 10px 15px;
+            transition: color 0.3s ease, transform 0.3s ease;
         }
 
         nav a:hover {
@@ -101,7 +101,7 @@
             color: #FFFFFF; /* White */
             text-align: center;
             padding: 20px 0;
-            margin-top: auto; /* Push footer to the bottom */
+            margin-top: 40px; /* Push footer to the bottom */
         }
 
         footer p {
