--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
             min-height: 100vh;
         }
 
-        /* Navigation Styling */
+        /* Navigation Bar */
         nav {
             background-color: #617E96; /* Slate Blue */
             padding: 20px 0;
             text-align: center;
-            position: sticky;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-
+        
         nav a {
             color: #FFFFFF; /* White */
             text-decoration: none;
@@ -40,7 +39,7 @@
             padding: 10px 15px;
             transition: color 0.3s ease, transform 0.3s ease;
         }
-
+        
         nav a:hover {
             color: #A0CDCA; /* Cool Aquamarine */
             transform: translateY(-3px);
