--- a/project.html
+++ b/project.html
@@ -188,7 +188,7 @@
         <section id="city-plan">
             <h2>City Plan</h2>
           <h3>
-            <img src="city_plan.jpg" alt="City Plan" class="city-plan"></h3>
+            <img src="https://github.com/AnanyaBp14/portfolio.github.io/blob/main/city_plan.jpeg.jpg" alt="City Plan" class="city-plan"></h3>
         </section>
         
         <section id="problem-statements">
