--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 /* General Styles */
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-ZZZserif;
     background-color: #F7D1A4; /* Soft Peach */
     margin: 0;
     padding: 0;
@@ -260,7 +260,7 @@ a:hover {
             <a href="index.html">Home</a>
             <a href="project.html">Project</a>
             <a href="ananya.html">Ananya</a>
-     		<a href="chinmayi.html">Chinmayi</a>
+      <a href="chinmayi.html">Chinmayi</a>
             <a href="ria.html">Ria</a>
             <a href="sanjana.html">Sanjana</a>
             <a href="about.html">About</a>
