--- a/about.html
+++ b/about.html
@@ -276,7 +276,7 @@ footer p {
       
         <!-- Team Member 1 -->
         <div class="team-member">
-            <img src="member2.jpg" alt="Team Member 2">
+            <img src="Ananya.jpg" alt="Team Member 1">
             <h3>Ananya B Pattanashetty</h3>
             <p>Roll no - 406</p>
             <p>USN - 01FE23BCS055</p>
@@ -288,7 +288,7 @@ footer p {
         </div>
            <!-- Team Member 1 -->
         <div class="team-member">
-            <img src="member1.jpg" alt="Team Member 1">
+            <img src="chinmayi.jpg" alt="Team Member 2">
             <h3>Chinmayi K B</h3>
             <p>Roll no - 412</p>
             <p>USN - 01FE23BCS080</p>
@@ -302,7 +302,7 @@ footer p {
 
         <!-- Team Member 3 -->
         <div class="team-member">
-            <img src="member3.jpg" alt="Team Member 3">
+            <img src="ria.jpg" alt="Team Member 3">
             <h3>Ria Javalgi</h3>
             <p>Roll no - 408</p>
             <p>USN - 01FE23BCS</p>
@@ -315,7 +315,7 @@ footer p {
 
         <!-- Team Member 4 -->
         <div class="team-member">
-            <img src="member4.jpg" alt="Team Member 4">
+            <img src="sanjana.jpg" alt="Team Member 4">
             <h3>Sanjana S</h3>
             <p>Roll no - 407</p>
             <p>USN - 01FE23BCS</p>
