--- a/project.html
+++ b/project.html
@@ -120,6 +120,21 @@ header p {
         background-position: 500% 0;
     }
 }
+	/* Styling for City Plan Section */
+#city-plan {
+    text-align: center;
+    padding: 40px 0;
+}
+
+#city-plan img {
+    max-width: 100%; /* Ensures the image doesn't overflow */
+    height: auto; /* Maintains aspect ratio */
+    border: 2px solid #D9B29F; /* Optional: Add a border */
+    border-radius: 8px; /* Optional: Add rounded corners */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow */
+    margin-top: 20px;
+}
+
 
 /* Main Content */
 main {
@@ -276,7 +291,7 @@ footer p {
         <section id="city-plan">
             <h2>City Plan</h2>
           <h3>
-            <img src="city_plan.jpeg.jpg" class="city-plan"></h3>
+            <img src="city_plan.jpeg.jpg" alt="City Plan" class="city-plan"></h3>
         </section>
         
         <section id="problem-statements">
