--- a/about.html
+++ b/about.html
@@ -305,7 +305,7 @@ footer p {
             <img src="ria.jpg" alt="Team Member 3">
             <h3>Ria Javalgi</h3>
             <p>Roll no - 408</p>
-            <p>USN - 01FE23BCS</p>
+            <p>USN - 01FE23BCS060</p>
             <div class="skills">
                 <div class="skill">C and C++</div>
                 <div class="skill">SQL</div>
@@ -318,7 +318,7 @@ footer p {
             <img src="sanjana.jpg" alt="Team Member 4">
             <h3>Sanjana S</h3>
             <p>Roll no - 407</p>
-            <p>USN - 01FE23BCS</p>
+            <p>USN - 01FE23BCS057</p>
             <div class="skills">
                 <div class="skill">C and C++</div>
                 <div class="skill">SQL</div>
