--- a/project.html
+++ b/project.html
@@ -291,7 +291,7 @@ footer p {
         <section id="city-plan">
             <h2>City Plan</h2>
           <h3>
-            <img src="city_plan.jpeg.jpg" alt="City Plan" class="city-plan"></h3>
+            <img src="city_plan.jpg" alt="City Plan" class="city-plan"></h3>
         </section>
         
         <section id="problem-statements">
@@ -301,7 +301,7 @@ footer p {
          <section id="project-description">
             <h2>Project Description</h2>
             <h3><p>Detailed description of the project</p></h3>
-          <a href="daa projectpdf.pdf" target="_blank">Download PDF</a>
+          <a href="daa projectpdf.pdf" target="_blank">View Description</a>
 
         <section id="business-cases">
             <h2>Business Cases Identified</h2>
