--- a/ananya.html
+++ b/ananya.html
@@ -290,8 +290,8 @@ header p {
         <a href="index.html">Home</a>
         <a href="project.html">Project</a>
         <a href="ananya.html">Ananya</a>
-        <a href="chinmayi.html">Chinmayi</a>
-        <a href="ria.html">Ria</a>
+        <a href="https://chinmayi-k-b.github.io/Vayujiva.github.io/chinmayi.html">Chinmayi</a>
+        <a href="https://riajavalagi.github.io/VAYUJIVA-/">Ria</a>
         <a href="sanjana.html">Sanjana</a>
         <a href="#about">About</a>
     </nav>
@@ -420,11 +420,11 @@ header p {
 <li>This is perfect for cases where data doesn’t change often but is queried a lot, like looking up average traffic conditions over the course of a day or week.</li><br>
 <li>It’s like having a shortcut to answer recurring questions about traffic without having to redo all the calculations every time.</li><br>
 <h4>Why These Algorithms Are Perfect for this task ?</h4>
-	<strong>Speed: </strong>In real-time traffic monitoring, we need to process data quickly. These algorithms ensure we can store, search, and update data without delays.
+	<li><strong>Speed: </strong>In real-time traffic monitoring, we need to process data quickly. These algorithms ensure we can store, search, and update data without delays.</li>
 
-<strong>Efficiency:</strong> Not only are these algorithms fast, but they also use memory efficiently. Traffic systems generate a lot of data, so we need to make sure we’re not using more memory than necessary.
+<li><strong>Efficiency:</strong> Not only are these algorithms fast, but they also use memory efficiently. Traffic systems generate a lot of data, so we need to make sure we’re not using more memory than necessary.</li>
 
-<strong>Scalability:</strong> As the system grows (more sensors, more intersections), we need these algorithms to handle larger datasets without slowing down. Arrays, Hashing, and Sparse Tables scale well as the system expands.
+<li><strong>Scalability:</strong> As the system grows (more sensors, more intersections), we need these algorithms to handle larger datasets without slowing down. Arrays, Hashing, and Sparse Tables scale well as the system expands.</li>
 </section>
 	      
       <section>
@@ -463,14 +463,14 @@ header p {
     Use an Array to store real-time status updates for quick lookup.</p>
 
     <p><strong>Query Handling:</strong><br>
-    A user searches for the nearest station: BST retrieves the closest one.<br>
-    A user types part of a station name: Trie provides suggestions.<br>
-    Retrieve the availability status: Use an array to check occupancy.</p>
+   <strong>A user searches for the nearest station:</strong> BST retrieves the closest one.<br>
+  <strong>  A user types part of a station name: </strong>Trie provides suggestions.<br>
+    <strong>Retrieve the availability status:</strong> Use an array to check occupancy.</p>
 
     <p><strong>Benefits</strong><br>
-    Efficiency: Fast query responses and updates.<br>
-    Scalability: Handles large networks of charging stations.<br>
-    User Experience: Provides seamless access to station information and status.</p>
+    <strong>Efficiency:</strong> Fast query responses and updates.<br>
+   <strong> Scalability:</strong> Handles large networks of charging stations.<br>
+    <strong>User Experience: </strong>Provides seamless access to station information and status.</p>
       </section>
       </section>
    <section>
