--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@ a:hover {
             <a href="index.html">Home</a>
             <a href="project.html">Project</a>
             <a href="ananya.html">Ananya</a>
-      <a href="chinmayi.html">Chinmayi</a>
-            <a href="ria.html">Ria</a>
-            <a href="sanjana.html">Sanjana</a>
+            <a href="https://chinmayi-k-b.github.io/Vayujiva.github.io/">Chinmayi</a>
+            <a href="https://riajavalagi.github.io/VAYUJIVA-/">Ria</a>
+            <a href="https://sanjanashetti13.github.io/daa_final/index.html">Sanjana</a>
             <a href="about.html">About</a>
     </nav>
 
