--- a/about.html
+++ b/about.html
@@ -254,10 +254,11 @@ footer p {
         <ul style="list-style: none; display: flex; justify-content: center; padding: 0; margin: 0;">
             <li style="margin: 0 1rem;"><a href="index.html">Home</a></li>
             <li style="margin: 0 1rem;"><a href="project.html">Project</a></li>
-            <li style="margin: 0 1rem;"><a href="chinmayi.html">Chinmayi</a></li>
-            <li style="margin: 0 1rem;"><a href="ananya.html">Ananya</a></li>
-            <li style="margin: 0 1rem;"><a href="ria.html">Ria</a></li>
-            <li style="margin: 0 1rem;"><a href="sanjana.html">Sanjana</a></li>
+            <a href="https://chinmayi-k-b.github.io/Vayujiva.github.io/">Chinmayi</a>
+            <a href="https://riajavalagi.github.io/VAYUJIVA-/">Ria</a>
+            <a href="https://sanjanashetti13.github.io/daa_final/index.html">Sanjana</a>
+            <a href="about.html">About</a>
+
         </ul>
     </nav>
 
