--- a/project.html
+++ b/project.html
@@ -278,7 +278,7 @@ footer p {
         <a href="https://chinmayi-k-b.github.io/Vayujiva.github.io/">Chinmayi</a>
         <a href="https://riajavalagi.github.io/VAYUJIVA-/">Ria</a>
         <a href="https://sanjanashetti13.github.io/daa_final/index.html">Sanjana</a>
-        <a href="#about">About</a>
+        <a href="about.html">About</a>
     </nav>
 
 	<header>
