--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ a:hover {
         <h3><p>Algorithms are everywhere around us, even if we don’t always notice them—like the air we breathe.we breathe. They help us get home faster by finding the quickest route on GPS, thanks to Dijkstra’s Algorithm, and sort through endless products on e-commerce sites to show us exactly what we’re looking for. These behind-the-scenes problem-solvers take complicated tasks and turn them into simple, seamless experiences. They’re the invisible helpers making our technology smarter, safer, and more personal every single day.</p></h3> 
     <h4><strong>Course Code:</strong> 24ECSC205</h4>
 <h4><strong>Course Title:</strong> Design and Analysis of Algorithms</h4>
-<h4><strong>Course Coordinator:</strong> Prof. Arundati Aralimatti</h4>
+<h4><strong>Course instructor:</strong> Prof. Arundati Aralimatti</h4>
 <h4><strong>References:</strong> Hemant Jain, Problem Solving Using Data and Algorithms Using C, Taran Technologies Private Limited, 2016</h4>
 
     </main>
