--- a/ananya.html
+++ b/ananya.html
@@ -397,7 +397,7 @@ header p {
     <strong>Data Collection:</strong> Arrays store real-time traffic data such as vehicle counts. These data points are stored in indexed positions within arrays, allowing for fast updates and retrieval.<br>
     <strong>Traffic Flow Analysis:</strong> Arrays can be used to keep track of traffic conditions (e.g., car density, speed at different time intervals) at each sensor or traffic signal. This allows for quick access to specific locations or times.</p>
 	<strong>Justification:</strong><br>
-	<li><strong>Fast Access and Update: </strong>strong>Arrays are ideal for storing traffic data as they allow for direct indexing and constant time access (O(1) complexity).</li><br>
+	<li><strong>Fast Access and Update: </strong>Arrays are ideal for storing traffic data as they allow for direct indexing and constant time access (O(1) complexity).</li><br>
 <li><strong>Efficient Memory Usage:</strong> Arrays provide contiguous memory allocation, ensuring that traffic data is stored compactly and in a predictable manner, with no overhead.</li><br>
 <li><strong>Simple Structure:</strong> Arrays are one of the simplest and most effective ways to store and manage static datasets where each element can be accessed directly by its index.</li><br>
     <h4>Hashing</h4> 
